--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,8 +1,8 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
-author_profile: true
+title: "Experience"
+permalink: /experience/
+author_profile: false
 ---
 
 {% include base_path %}
