--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,8 +1,8 @@
 ---
 layout: archive
-title: "Teaching"
-permalink: /teaching/
-author_profile: false
+title: "Experience"
+permalink: /experience/
+author_profile: true
 ---
 
 {% include base_path %}
