--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -1,14 +1,13 @@
 ---
 layout: archive
-title: "Experience"
-permalink: /experience/
+title: "Contact"
+permalink: /conact/
 author_profile: true
 ---
 
 {% include base_path %}
 
-
-{% for post in site.portfolio %}
+{% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
 
