--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -6,3 +6,6 @@ author_profile: true
 ---
 
 
+Feel free to email me at: fg100@wellesley.edu
+
+Find me on LinkedIn: <a href="https://www.linkedin.com/in/fernandamayela/">www.linkedin.com/in/fernandamayela/</a>
