--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -5,12 +5,12 @@ permalink: /talks/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
+{% if site.talkmap_link == true %}
+
+<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+
 {% endif %}
 
-{% include base_path %}
-
-{% for post in site.publications reversed %}
-  {% include archive-single.html %}
+{% for post in site.talks reversed %}
+  {% include archive-single-talk.html %}
 {% endfor %}
